welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: not found: value T
		brosse(T(decalage%getWorldHeight()))
                       ^Array2:16: error: not found: value T
			brosse(T((i+decalage)%getWorldHeight()))
                               ^